# incident-management

./: .gitignore  README.md  incident-managment.db  init_db.py  main.py  pyproject.toml
app/api/endpoints/: authentication.py  incidents.py
app/core/: security.py
app/db/: base.py  crud.py  session.py
app/models/: incident.py  user.py
app/schemas/: incident.py  user.py
app/services/: classifier.py
app/tests/: test_incident.py
